# valid8-platform

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  security.yml
apps/control-plane/: Dockerfile  eslint.config.js  package-lock.json  package.json
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/tests/: test_contracts.py  test_registry.py  test_runner.py  test_shell_plugin.py
apps/worker/worker/: __main__.py  config.py  filequeue.py  models.py  registry.py  runner.py
apps/worker/worker/plugins/: base.py  shell.py
docs/: 00_context.md  01_vision.md  02_prd.md  03_architecture.md  04_platform-roadmap.md  05_runbook.md  06_security.md  07_observability.md  08_quality.md  09_ai-guardrails.md  10_backlog-rules.md  11_sprint-system.md  12_definition-of-done.md  13_risk-register.md  14_decision-log.md  15_glossary.md
docs/background/: 001_health_endpoint.md  00_principles.md  01_epics.md
infra/: docker-compose.yml
project_management/: BACKLOG_AND_SPRINT_MANAGEMENT_SETUP.md  Backlog.md  CONCORD_GRAPH_DATA_MAP.md  Current_Sprint.md  Decision_Matrix.md  Project_Sprint_Log.md  Rules.md  Sprint_TEMPLATE.md  epics.md
project_management/adr/: ADR-000-template.md  ADR-2026-03-05-architecture-reassessment.md
project_management/completed_sprints/: Sprint-001.md
project_management/debt_checks/: README.md  Sprint-002.md  TEMPLATE.md
project_management/rules/: 00_operating-principles.md  01_planning-rules.md  (+8 more)
(+13 files in other folders)
