[project]
name = "hyperdev-worker"
version = "0.1.0"
description = "Worker for hyperdev-scaffold"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "jsonschema>=4.22.0",
  "pip-audit>=2.9.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
